--- a/index.html
+++ b/index.html
@@ -181,6 +181,25 @@
   </div>
 </template>
 
+<script>
+  var fireballSize = 22;
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+  var wizardProportion = 1.337;
+  
+  var getFireballSpeed = function (isWindFromLeft) {
+    return isWindFromLeft ? 5 : 2;
+  };
+  var getWizardHeight = function () {
+    return wizardProportion * wizardWidth;
+  };
+  var getWizardX = function (gameFieldWidth) {
+    return (gameFieldWidth - wizardWidth) / 2;
+  };
+  var getWizardY = function (gameFieldHeight) {
+    return gameFieldHeight / 3;
+  };
+</script>
 <script src="js/game.js"></script>
 
 </body>
