Добавлена статистика игроков

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   var wizardSpeed = 3;
   var wizardWidth = 70;
   var wizardProportion = 1.337;
-  
+
   var getFireballSpeed = function (isWindFromLeft) {
     return isWindFromLeft ? 5 : 2;
   };
@@ -200,6 +200,7 @@
     return gameFieldHeight / 3;
   };
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
